start working on server
